<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Halo, mari berbagi cerita kamu disini! Temukan keasikan kamu dalam setiap cerita yang kamu tuangkan</string>
    <string name="title_welcome_page">Selamat datang di MyStory</string>
    <string name="title_signup_page">Kenalan dulu yuk! Lengkapi data kamu dulu ya!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi pengalamanmu?</string>
    <string name="name">Nama</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="Required">Wajib</string>
    <string name="title">Nama</string>
    <string name="description">Ini adalah sebuah deskripsi yang akan menggambarkan isi cerita dari semua pengguna yang ada</string>
    <string name="error_loading_story">Gagal memuat cerita</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="message">Pesan</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan gambar dan deskripsi terlebih dahulu.</string>
    <string name="error">Error</string>
    <string name="unknown_error">kesalahan tidak diketahui</string>
    <string name="lanjut">Lanjut</string>
    <string name="yeah">Yeah!</string>
    <string name="success">Login anda berhasil!</string>
    <string name="login_failed">Login Gagal</string>
    <string name="ok">OK!</string>
    <string name="no_media_selected">tidak ada media yang dipilih</string>
    <string name="image_upload_successfully">Gambar berhasil diunggah</string>
    <string name="failed_to_upload_image">Gagal mengunggah Gambar</string>
    <string name="permission_request_granted">Permintaan izin diberikan</string>
    <string name="permission_request_denied">Permintaan izin ditolak</string>
    <string name="email_is_not_valid">Email tidak valid</string>
    <string name="password_cannot_be_less_than_8_character">Password tidak boleh kurang dari 8 karakter</string>
    <string name="add_location">Ingin menambah lokasi anda?</string>
    <string name="error_fetching_stories">Kesalahan saat memuat cerita</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="add_story">Cerita Baru</string>
    <string name="maps">Peta</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba lagi</string>
    <string name="email_hint">Email</string>
</resources>